增加了載入圖

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="某個讓你舔婆的地方&#10;Somewhere allows you to lick your wives"/>
     <meta name="keywords" content="AzurLane,Live2D,L2D,PIXI.js"/>
-    <meta property="og:title" content="Azur Lane Live2D Viewer v.764/>
+    <meta property="og:title" content="Azur Lane Live2D Viewer v.764"/>
     <meta property="og:description" content="某個讓你舔婆的地方&#10;Somewhere allows you to lick your wives"/>
     <link rel="canonical" href="https://chaoray.github.io/AzurLane-Live2D-Viewer/"/>
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
